Remove the usage of the `URL` constructor and derive it from a URI object